# proc-macro-workshop

./: Cargo.toml
src/: lib.rs  main.rs
tests/: 05-method-chaining.rs
