[package]
name = "derive_builder"
version = "0.1.0"
edition = "2021"
autotests = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/progress.rs"

[dev-dependencies]
trybuild = { version = "1.0", features = ["diff"] }

[dependencies]
syn = { version = "2.0", features = ["extra-traits"] }
proc-macro2 = "1.0"
quote = "1.0"
